GNOME Bugzilla – Bug 682979
memory leak fix: unref item_type_info on all switch breaks
Last modified: 2012-09-03 05:21:17 UTC
Created attachment 222833 [details] [review] memory leak fix: unref item_type_info on all switch breaks Avoid leaking the item_type_info when breaking out of the switch.
Thanks for spotting this! Pushed. When reviewing this, I noticed that this part of the code is needing some cleanup, so I committed http://git.gnome.org/browse/pygobject/commit/?id=1223358e2c558dd7ac3300126f989054ec5a5b3f