Fix memory leak in _pygi_argument_to_object()

Avoid leaking the item_type_info when breaking out of the
switch in _pygi_argument_to_object() for unmarshalling arrays.

https://bugzilla.gnome.org/show_bug.cgi?id=682979